[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-problem-archive"
version = "0.1.0"
description = "Read-only, non-commercial prototype scaffold for analyzing public Reddit problem discussions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "praw==7.8.1",
    "python-dotenv==1.1.0",
    "sqlalchemy==2.0.41",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
